--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : # e.g., "github username"
+  github           : "https://github.com/yunhui-jiang"
   google_plus      :
   keybase          :
   instagram        :
