--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : # hunterjiang target="_blank" rel="noopener noreferrer" style="color: inherit;"
+  github           : hunterjiang
   google_plus      :
   keybase          :
   instagram        :
