--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "Suzhou, China"
   employer         :
   pubmed           : 
-  #googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
+  googlescholar    : "https://scholar.google.com/citations?user=ERG_OsYAAAAJ&hl=zh-CN"
   email            : "jiang_yunhui99@@163.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
