--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=ERG_OsYAAAAJ&hl=zh-CN"
-  email            : "jiang_yunhui99@@163.com"
+  email            : "jiangyh2022@alumni.shanghaitech.edu.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
